--- a/apps/publishing-api/admin-tasks.html
+++ b/apps/publishing-api/admin-tasks.html
@@ -363,6 +363,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/publishing-api/commit/d46ad53d419fe2e4e66eb8b37bb3abb5509a9514">22 Dec 2020</a>
 </div>
