--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="http://www.sheffield.gov.uk" class="govuk-link">Sheffield City Council</a></li>
+      <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
+      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
       <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
-      <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
+      <li><a href="http://www.medway.gov.uk" class="govuk-link">Medway Council</a></li>
+      <li><a href="http://www.lbhf.gov.uk/" class="govuk-link">London Borough of Hammersmith and Fulham Council</a></li>
       <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
-      <li><a href="http://www.maidstone.gov.uk/" class="govuk-link">Maidstone Borough Council</a></li>
-      <li><a href="http://www.manchester.gov.uk" class="govuk-link">Manchester City Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="http://www.dover.gov.uk" class="govuk-link">Dover District Council</a></li>
-      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
-      <li><a href="http://www.plymouth.gov.uk" class="govuk-link">Plymouth City Council</a></li>
-      <li><a href="http://www.watford.gov.uk/" class="govuk-link">Watford Borough Council</a></li>
+      <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
