--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -362,14 +362,14 @@ actually any pages with this document type.</p>
 <ul>
 <li><a href="https://www.gov.ukhttp//www.lewes-eastbourne.gov.uk">Eastbourne Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.ryedale.gov.uk">Ryedale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.derbyshire.gov.uk">Derbyshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.medway.gov.uk">Medway Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lbhf.gov.uk/">London Borough of Hammersmith and Fulham Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hertsdirect.org/">Hertfordshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.sheffield.gov.uk">Sheffield City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.gov.scot/coronavirus-covid-19/">Coronavirus (COVID-19) in Scotland - gov.scot</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/">NHS</a></li>
+<li><a href="https://www.gov.ukhttps//www.gov.uk/alerts/how-alerts-work">How emergency alerts work</a></li>
+<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
