--- a/manual/alerts/security-updates.html
+++ b/manual/alerts/security-updates.html
@@ -153,6 +153,13 @@
 
     
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/adc9c977b71f3bcedc00f0ceceb93ebdc93ad3fc">22 Dec 2020</a>
 </div>
