--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.medway.gov.uk" class="govuk-link">Medway Council</a></li>
-      <li><a href="http://www.lbhf.gov.uk/" class="govuk-link">London Borough of Hammersmith and Fulham Council</a></li>
       <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
       <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
-      <li><a href="http://www.sheffield.gov.uk" class="govuk-link">Sheffield City Council</a></li>
-      <li><a href="http://www.horsham.gov.uk/" class="govuk-link">Horsham District Council</a></li>
-      <li><a href="http://www.huntsdc.gov.uk" class="govuk-link">Huntingdonshire District Council</a></li>
-      <li><a href="http://www.herefordshire.gov.uk" class="govuk-link">Herefordshire Council</a></li>
-      <li><a href="http://www.winchester.gov.uk" class="govuk-link">Winchester City Council</a></li>
-      <li><a href="http://www.woking.gov.uk/" class="govuk-link">Woking Borough Council</a></li>
+      <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="https://www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest" class="govuk-link">Stop and search | Ethnicity facts and figures</a></li>
+      <li><a href="http://www.york.gov.uk" class="govuk-link">York City Council</a></li>
+      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="https://www.gov.scot/coronavirus-covid-19/" class="govuk-link">Coronavirus (COVID-19) in Scotland - gov.scot</a></li>
+      <li><a href="http://www.north-herts.gov.uk" class="govuk-link">North Hertfordshire District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
