--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/209252.pt">Tecnologias para Grandes Eventos é tema de Seminário GREAT em SP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286041.es-419">Se presentó la 5ta edición del Festival Shakespeare Buenos Aires en la Residencia del Embajador Británico en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/ukuzbekistan-bilateral-relations--2">UK/Uzbekistan Bilateral Relations</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263031.es-419">Términos y condiciones del concurso #MusicIsGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/231480.zh-tw">呼應聯合國最新氣候報告 英國貿易文化辦事處與台達共同呼籲強化節能政策對抗暖化</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--5">Celebrating three great English exports in 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232340.es">Expertos internacionales analizan planes nacionales de empresa y derechos humanos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/visa-applications--2">Visa applications</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/172849.pt">UKTI busca brasileiros para participar de festival</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/need-consular-services-book-it-online--2">Need Consular services? Book it online</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286266.es">Día de San David 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/282770.es">Exhibición y cata de cervezas premium británicas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201656.es-419">Uruguay participa en Cumbre de la Alianza para Gobierno Abierto</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-visits-switzerland">Minister for Europe visits Switzerland</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
