--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
-      <li><a href="http://www.cheshireeast.gov.uk" class="govuk-link">Cheshire East Council</a></li>
-      <li><a href="http://www.merton.gov.uk/" class="govuk-link">London Borough of Merton Council</a></li>
-      <li><a href="http://www.cookstown.gov.uk/" class="govuk-link">Cookstown District Council</a></li>
-      <li><a href="http://www.workplacepensions.gov.uk/" class="govuk-link">Workplace Pensions</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
-      <li><a href="http://www.e-lindsey.gov.uk" class="govuk-link">East Lindsey District Council</a></li>
-      <li><a href="http://www.manchester.gov.uk" class="govuk-link">Manchester City Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
+      <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
+      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
+      <li><a href="http://www.hertsdirect.org/" class="govuk-link">Hertfordshire County Council</a></li>
+      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
+      <li><a href="https://www.gov.uk/alerts/how-alerts-work" class="govuk-link">How emergency alerts work</a></li>
+      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
+      <li><a href="https://www.nhs.uk/" class="govuk-link">NHS</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
