Hourly scheduled redeploy 25d4aeaa0f4c6e7be32459a5b704d550a36e89ea

--- a/manual.html
+++ b/manual.html
@@ -422,7 +422,7 @@
 
     <h3>How to...</h3>
     <ul>
-        <li><a href="/manual/set-up-gcp-account.html">Set up your GCP account</a></li>
+        <li><a href="/manual/google-cloud-platform-gcp.html">Google Cloud Platform (GCP)</a></li>
         <li><a href="/manual/howto-ssh-to-machines.html">SSH into machines</a></li>
     </ul>
     <h3>Learn</h3>
