--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.medway.gov.uk">Medway Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.portsmouth.gov.uk">Portsmouth City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.ryedale.gov.uk">Ryedale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.renfrewshire.gov.uk">Renfrewshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.derbyshire.gov.uk">Derbyshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.york.gov.uk">York City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.derbyshire.gov.uk">Derbyshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.portsmouth.gov.uk">Portsmouth City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ryedale.gov.uk">Ryedale District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.wyrebc.gov.uk/">Wyre Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hounslow.gov.uk">London Borough of Hounslow Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
