--- a/manual/aws-iam-key-rotation.html
+++ b/manual/aws-iam-key-rotation.html
@@ -363,7 +363,7 @@ In production systems, this could prevent minor outages scaling into incidents.<
           <h4>How to...</h4>
 
           <ul class="govuk-list">
-            <li><a href="/manual/set-up-gcp-account.html">Set up your GCP account</a></li>
+            <li><a href="/manual/google-cloud-platform-gcp.html">Google Cloud Platform (GCP)</a></li>
             <li><a href="/manual/howto-ssh-to-machines.html">SSH into machines</a></li>
           </ul>
         </div>
