--- a/manual/common-aws-tasks-for-2nd-line-support.html
+++ b/manual/common-aws-tasks-for-2nd-line-support.html
@@ -406,7 +406,7 @@ instances.</p>
           <h4>How to...</h4>
 
           <ul class="govuk-list">
-            <li><a href="/manual/set-up-gcp-account.html">Set up your GCP account</a></li>
+            <li><a href="/manual/google-cloud-platform-gcp.html">Google Cloud Platform (GCP)</a></li>
             <li><a href="/manual/howto-ssh-to-machines.html">SSH into machines</a></li>
           </ul>
         </div>
