--- a/manual/rules-for-getting-production-access.html
+++ b/manual/rules-for-getting-production-access.html
@@ -198,7 +198,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/4f2ffed8d5bcf109bde3e9ef48de8a5d86cabdf3">18 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/3da56da5276fcb0738058189c77d8ec156c28400">23 Jun 2021</a>
 </div>
 
  <h1 id='header'>Rules for getting production access</h1> <p>These rules apply to developers in the GOV.UK programme and SREs in the TechOps programme.</p>
@@ -209,7 +209,7 @@
 <li>Access to Production Deploy Jenkins and Staging Deploy Jenkins to deploy applications via the <a href="https://github.com/orgs/alphagov/teams/gov-uk-production">GOV.UK Production GitHub team</a></li>
 <li>SSH access to production and staging servers via <a href="https://github.com/alphagov/govuk-puppet">govuk-puppet</a></li>
 <li>AWS <a href="https://github.com/alphagov/govuk-aws-data/blob/master/data/infra-security/production/common.tfvars">PowerUser Access</a> via the <code>role_poweruser_user_arns</code> role</li>
-<li><a href="/manual/set-up-gcp-account.html">Google Cloud Platform</a> (GCP) access with <code>Storage Admin</code> role to manage <a href="/manual/fall-back-to-mirror.html">static mirrors</a></li>
+<li><a href="/manual/google-cloud-platform-gcp.html">Google Cloud Platform (GCP)</a> access to role to manage <a href="/manual/fall-back-to-mirror.html">static mirrors</a> and DNS</li>
 <li>Signon &ldquo;Super Admin&rdquo; access in production</li>
 <li>GOV.UK PaaS <a href="https://docs.cloud.service.gov.uk/orgs_spaces_users.html#space-developer">Space developer</a>
 access to all spaces in <a href="https://admin.cloud.service.gov.uk/organisations/f8718311-b9a4-49d3-b1c7-7c5345a74e35">the govuk_development organisation</a></li>
