--- a/apps/whitehall.html
+++ b/apps/whitehall.html
@@ -481,6 +481,7 @@
       </ul>
 </ul>
 <h2 id='example-pages-published-by-whitehall'>Example pages published by whitehall</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="https://www.gov.uk/government/organisations" class="govuk-link">Departments, agencies and public bodies</a></li>
       <li><a href="https://www.gov.uk/government/ministers" class="govuk-link">Ministers</a></li>
       <li><a href="https://www.gov.uk/world/embassies" class="govuk-link">Find a British embassy, high commission or consulate</a></li>
       <li><a href="https://www.gov.uk/government/people/boris-johnson" class="govuk-link">The Rt Hon Boris Johnson MP</a></li>
@@ -489,8 +490,7 @@
       <li><a href="https://www.gov.uk/government/people/christopher-whitty" class="govuk-link">Professor Chris Whitty</a></li>
       <li><a href="https://www.gov.uk/government/people/priti-patel" class="govuk-link">The Rt Hon Priti Patel MP</a></li>
       <li><a href="https://www.gov.uk/government/people/kwasi-kwarteng" class="govuk-link">The Rt Hon Kwasi Kwarteng MP</a></li>
-      <li><a href="https://www.gov.uk/government/people/alok-sharma" class="govuk-link">The Rt Hon Alok Sharma MP</a></li>
-      <li><a href="https://www.gov.uk/government/people/michael-gove" class="govuk-link">The Rt Hon Michael Gove MP</a></li>
+      <li><a href="https://www.gov.uk/government/ministers/secretary-of-state-for-the-home-department" class="govuk-link">Secretary of State for the Home Department</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
