--- a/document-types/decision.html
+++ b/document-types/decision.html
@@ -371,8 +371,8 @@
 <li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-ms-hannah-rhodes">Teacher misconduct panel outcome: Ms Hannah Rhodes</a></li>
 <li><a href="https://www.gov.uk/government/publications/human-and-veterinary-medicines-register-of-licensed-wholesale-distribution-sites">Human and veterinary medicines: register of licensed wholesale distribution sites</a></li>
 <li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-christopher-harper">Teacher misconduct panel outcome: Mr Christopher Harper</a></li>
-<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mrs-vanessa-summers">Teacher misconduct panel outcome: Mrs Vanessa Summers</a></li>
 <li><a href="https://www.gov.uk/government/publications/regulatory-judgements-and-regulatory-notices">Regulatory judgements and notices, and gradings under review</a></li>
+<li><a href="https://www.gov.uk/government/publications/medical-devices-given-exceptional-use-authorisations-during-the-covid-19-pandemic">Medical devices given exceptional use authorisations during the COVID-19 pandemic</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=decision&amp;count=10">Source query from Search API</a></p>
 
