--- a/document-types/hmrc_manual_section.html
+++ b/document-types/hmrc_manual_section.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: hmrc_manual_section</h1>
 
-  <p>There are <strong>80098</strong> pages with document type
+  <p>There are <strong>80105</strong> pages with document type
 &lsquo;hmrc_manual_section&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/vat-government-and-public-bodies/vatgpb9700">VATGPB9700 - Government departments and health bodies: Contracted Out Services (COS) Headings: contents</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/corporate-intangibles-research-and-development-manual/cird80000">CIRD80000 - R&amp;D tax relief: introduction: contents</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/stamp-duty-land-tax-manual/sdltm29900">SDLTM29900 - Relief for transfers involving multiple dwellings: contents</a></li>
-<li><a href="https://www.gov.uk/hmrc-internal-manuals/construction-industry-scheme-reform/cisr14090">CISR14090 - The Scheme: construction operations: building service systems</a></li>
+<li><a href="https://www.gov.uk/hmrc-internal-manuals/residence-domicile-and-remittance-basis/rdrm11000">RDRM11000 - Residence: The Statutory Residence Test (SRT): contents</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/national-insurance-manual/nim39110">NIM39110 - National Insurance Numbers (NINOs): Format and Security: What a NINO looks like</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=hmrc_manual_section&amp;count=10">Source query from Search API</a></p>
