--- a/document-types/news_story.html
+++ b/document-types/news_story.html
@@ -369,10 +369,10 @@
 <li><a href="https://www.gov.uk/government/news/magistrates-court-listings-now-published-online">Magistrates’ court listings now published online</a></li>
 <li><a href="https://www.gov.uk/government/news/ongoing-industrial-action-at-dvla">Ongoing industrial action at DVLA</a></li>
 <li><a href="https://www.gov.uk/government/news/graduate-route-to-open-to-international-students-on-1-july-2021">Graduate route to open to international students on 1 July 2021</a></li>
+<li><a href="https://www.gov.uk/government/news/uk-travel-update-malta-added-to-green-list-and-green-watchlist-extended-as-plans-for-quarantine-free-travel-for-fully-vaccinated-passengers-from-ambe">UK travel update: Malta added to green list and green watchlist extended as plans for quarantine-free travel for fully vaccinated passengers from amber list countries confirmed</a></li>
 <li><a href="https://www.gov.uk/government/news/proposed-new-timetable-for-state-pension-age-increases">Proposed new timetable for State Pension age increases</a></li>
-<li><a href="https://www.gov.uk/government/news/uk-to-host-g7-summit-in-cornwall">UK to host G7 Summit in Cornwall</a></li>
 <li><a href="https://www.gov.uk/government/news/incident-at-heathrow-airport-18-june-2021">Incident at Heathrow Airport, 18 June 2021</a></li>
-<li><a href="https://www.gov.uk/government/news/mot-changes-20-may-2018">MOT rule changes: 20 May 2018</a></li>
+<li><a href="https://www.gov.uk/government/news/uk-to-host-g7-summit-in-cornwall">UK to host G7 Summit in Cornwall</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_story&amp;count=10">Source query from Search API</a></p>
 
