--- a/document-types/policy_paper.html
+++ b/document-types/policy_paper.html
@@ -371,8 +371,8 @@
 <li><a href="https://www.gov.uk/government/publications/dbs-privacy-policies">DBS Privacy Policies</a></li>
 <li><a href="https://www.gov.uk/government/publications/review-of-data-security-consent-and-opt-outs">Review of data security, consent and opt-outs</a></li>
 <li><a href="https://www.gov.uk/government/publications/tax-on-cryptoassets">Tax on cryptoassets</a></li>
-<li><a href="https://www.gov.uk/government/publications/new-atlantic-charter-and-joint-statement-agreed-by-the-pm-and-president-biden">New Atlantic Charter and Joint Statement agreed by the PM and President Biden</a></li>
 <li><a href="https://www.gov.uk/government/publications/the-mortgage-guarantee-scheme">The mortgage guarantee scheme</a></li>
+<li><a href="https://www.gov.uk/government/publications/slides-and-datasets-to-accompany-coronavirus-press-conference-14-june-2021">Slides and datasets to accompany coronavirus press conference: 14 June 2021</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=policy_paper&amp;count=10">Source query from Search API</a></p>
 
