--- a/document-types/press_release.html
+++ b/document-types/press_release.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: press_release</h1>
 
-  <p>There are <strong>31676</strong> pages with document type
+  <p>There are <strong>31678</strong> pages with document type
 &lsquo;press_release&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/government/news/further-support-for-birmingham-blackpool-cheshire-east-cheshire-west-and-chester-liverpool-city-region-and-warrington-to-tackle-delta-b16172-v">Further support for Birmingham, Blackpool, Cheshire East, Cheshire West and Chester, Liverpool City region and Warrington to tackle Delta (B1.617.2) variant</a></li>
 <li><a href="https://www.gov.uk/government/news/uk-agrees-historic-trade-deal-with-australia">UK agrees historic trade deal with Australia</a></li>
 <li><a href="https://www.gov.uk/government/news/covid-19-home-testing-kits-now-easier-to-order">COVID-19 home testing kits now easier to order</a></li>
+<li><a href="https://www.gov.uk/government/news/new-dvla-online-tachograph-service-slashes-wait-times-and-allows-instant-payments">New DVLA online tachograph service slashes wait times and allows instant payments</a></li>
 <li><a href="https://www.gov.uk/government/news/extra-bank-holiday-to-mark-the-queens-platinum-jubilee-in-2022">Extra Bank Holiday to mark The Queen’s Platinum Jubilee in 2022</a></li>
-<li><a href="https://www.gov.uk/government/news/vaccination-programme-accelerated-as-step-4-is-paused">Vaccination programme accelerated as Step 4 is paused</a></li>
 <li><a href="https://www.gov.uk/government/news/new-analysis-of-lateral-flow-tests-shows-specificity-of-at-least-999">New analysis of lateral flow tests shows specificity of at least 99.9%</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=press_release&amp;count=10">Source query from Search API</a></p>
