--- a/document-types/protected_food_drink_name.html
+++ b/document-types/protected_food_drink_name.html
@@ -361,15 +361,15 @@ actually any pages with this document type.</p>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/protected-food-drink-names/scotch-whisky">Scotch Whisky</a></li>
-<li><a href="https://www.gov.uk/protected-food-drink-names/cornish-pasty">Cornish Pasty</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/lanzarote">Lanzarote</a></li>
+<li><a href="https://www.gov.uk/protected-food-drink-names/cornish-pasty">Cornish Pasty</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/west-country-farmhouse-cheddar-cheese">West Country Farmhouse Cheddar Cheese</a></li>
+<li><a href="https://www.gov.uk/protected-food-drink-names/mallorca">Mallorca</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/kephalonia-slash-kefalonia">Κεφαλονιά / Kefalonia</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/jersey-royal-potatoes">Jersey Royal Potatoes</a></li>
-<li><a href="https://www.gov.uk/protected-food-drink-names/brindisi">Brindisi</a></li>
-<li><a href="https://www.gov.uk/protected-food-drink-names/grand-premier-cru">Grand premier cru</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/uri">Uri</a></li>
 <li><a href="https://www.gov.uk/protected-food-drink-names/antep-baklavasi-slash-gaziantep-baklavasi">Antep Baklavası / Gaziantep Baklavası</a></li>
+<li><a href="https://www.gov.uk/protected-food-drink-names/watercress">Watercress</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=protected_food_drink_name&amp;count=10">Source query from Search API</a></p>
 
