--- a/document-types/publication_scheme.html
+++ b/document-types/publication_scheme.html
@@ -368,11 +368,11 @@
 <li><a href="https://www.gov.uk/government/organisations/ministry-of-defence/about/publication-scheme">Ministry of Defence – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/charity-commission/about/publication-scheme">The Charity Commission – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade/about/publication-scheme">Department for International Trade – Publication scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/department-for-business-energy-and-industrial-strategy/about/publication-scheme">Department for Business, Energy &amp; Industrial Strategy – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-work-pensions/about/publication-scheme">Department for Work and Pensions – Publication scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/land-registry/about/publication-scheme">HM Land Registry – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-digital-culture-media-sport/about/publication-scheme">Department for Digital, Culture, Media &amp; Sport – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-of-health-and-social-care/about/publication-scheme">Department of Health and Social Care – Publication scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/land-registry/about/publication-scheme">HM Land Registry – Publication scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/ministry-of-housing-communities-and-local-government/about/publication-scheme">Ministry of Housing, Communities &amp; Local Government – Publication scheme</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=publication_scheme&amp;count=10">Source query from Search API</a></p>
 
