--- a/document-types/residential_property_tribunal_decision.html
+++ b/document-types/residential_property_tribunal_decision.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: residential_property_tribunal_decision</h1>
 
-  <p>There are <strong>4857</strong> pages with document type
+  <p>There are <strong>4863</strong> pages with document type
 &lsquo;residential_property_tribunal_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -362,15 +362,15 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/julie-stoddern-chi-slash-00he-slash-hba-slash-2021-slash-0001">Julie Stoddern: CHI/00HE/HBA/2021/0001</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-6-compton-court-walsall-road-four-oaks-sutton-coldfield-west-midlands-b74-4qy-bir-slash-00cn-slash-hin-slash-2020-slash-0014">Flat 6 Compton Court, Walsall Road, Four Oaks, Sutton Coldfield, West Midlands, B74 4QY: BIR/00CN/HIN/2020/0014</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/julie-stoddern-chi-slash-00he-slash-hba-slash-2021-slash-0001">Julie Stoddern: CHI/00HE/HBA/2021/0001</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/6-college-road-london-n17-8ea-ref-lon-slash-00ap-slash-oce-slash-2021-slash-0035">6 College Road, London N17 8EA - Ref: LON/00AP/OCE/2021/0035</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/lon-slash-00bc-slash-hba-slash-2020-slash-0007-8-monarch-way-ilford-essex-ig2-7ny">LON/00BC/HBA/2020/0007 : 8 Monarch Way Ilford Essex IG2 7NY</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/11a-court-yard-london-se9-5pr-lon-slash-00al-slash-f77-slash-2021-slash-0009">11a Court Yard, London, SE9 5PR: LON/00AL/F77/2021/0009</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/60-windsor-avenue-london-sw19-2rr-ref-lon-slash-00ba-slash-hba-slash-2020-slash-0011">60 Windsor Avenue, London, SW19 2RR - REF: LON/00BA/HBA/2020/0011</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/cambrai-court-130-aldermans-hill-palmers-green-london-n13-4qh-lon-slash-00ak-slash-oce-slash-2019-slash-0216">Cambrai Court, 130 Aldermans Hill, Palmers Green, London, N13 4QH: LON/00AK/OCE/2019/0216</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/beaumont-court-victoria-road-southend-on-sea-essex-ss2-6eb-cam-slash-00kf-slash-lis-slash-2020-slash-0007-cam-slash-00kf-slash-ldc-slash-2020-slash-0020-and-cam-slash-00kf-slash-lsc-slash-2020-slash-0042">Beaumont Court, Victoria Road, Southend on Sea Essex SS2 6EB: CAM/00KF/LIS/2020/0007, CAM/00KF/LDC/2020/0020 &amp;  CAM/00KF/LSC/2020/0042</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/22-the-vulcan-gunwharf-quays-portsmouth-hampshire-po1-3bf-chi-slash-00mr-slash-lsc-slash-2020-slash-0114">22 The Vulcan, Gunwharf Quays, Portsmouth, Hampshire PO1 3BF: CHI/00MR/LSC/2020/0114</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/7-carter-house-brune-street-london-e1-7nn-lon-slash-00bg-slash-hmf-slash-2020-slash-0188">7 Carter House, Brune Street, London E1 7NN : LON/00BG/HMF/2020/0188</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/48-50-ling-road-london-e16-4al-lon-slash-00bb-slash-oce-slash-2021-slash-0013">48-50 Ling Road, London E16 4AL: LON/00BB/OCE/2021/0013</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/17-ringwood-avenue-longsight-manchester-m12-5tp-man-00bl-mnr-2019-0068">17 Ringwood Avenue, Longsight, Manchester, M12 5TP MAN/00BL/MNR/2019/0068</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=residential_property_tribunal_decision&amp;count=10">Source query from Search API</a></p>
