--- a/document-types/uk_market_conformity_assessment_body.html
+++ b/document-types/uk_market_conformity_assessment_body.html
@@ -364,12 +364,12 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/sgs-united-kingdom-limited">SGS United Kingdom Limited</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/tuv-sud-babt">TUV SUD BABT</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/tuv-uk-limited">TÜV UK Limited</a></li>
-<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/intertek-testing-certification-ltd">Intertek Testing &amp; Certification LTD</a></li>
+<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/dnv-gl-uk-limited">DNV UK LIMITED</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/ul-international-uk-ltd">UL International (UK) LTD</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/sira-certification-service">CSA Group Testing UK Ltd</a></li>
+<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/intertek-testing-certification-ltd">Intertek Testing &amp; Certification LTD</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/british-board-of-agrement">British Board of Agrément</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/anp-certification-ltd">AnP Certification Ltd</a></li>
-<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/tuv-rheinland-uk-ltd">TUV Rheinland UK Ltd</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=uk_market_conformity_assessment_body&amp;count=10">Source query from Search API</a></p>
 
