Hourly scheduled redeploy db5dbf1c0ac850628eba68c0f77b9aa9eedc9152

--- a/apps/static/slimmer_templates.html
+++ b/apps/static/slimmer_templates.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/static/commit/449cd6f7942472dbc7abdfae9cd705ebf60de144">16 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/static/commit/6cac7918bc710949f61e7c050a3f0bf2ee61f328">23 Jun 2021</a>
 </div>
 
   <h1 class="page-title">static: Slimmer Templates</h1>
@@ -375,6 +375,9 @@
 <h2 id="gem_layout_full_width"><code>gem_layout_full_width</code></h2>
 <p>This is the same as the <code>gem_layout</code> template, except that this layout <strong>doesn't</strong> constrain and centre the content to the same width as the GOV.UK header.</p>
 <p>Use this layout if you want to have full width content - such as the blue welcome bar on the GOV.UK homepage.</p>
+<h2 id="gem_layout_account"><code>gem_layout_account</code></h2>
+<p>This is a variation on the <code>gem_layout</code> template intended to be used on GOV.UK Account pages. This layout <strong>doesn't</strong> include the feedback component as the account pages use a different one from the rest of GOV.UK.</p>
+<p>This also includes the Account product name in the layout header and changes the logo link to the account homepage link.</p>
 <h2 id="core_layout-default">
 <code>core_layout</code> (default)</h2>
 <p>This template contains styles for the black header bar, the footer and core layout classes. By default it will centre your content to the same width as the GOV.UK header. It provides classes for grid layouts using the column mixins from the frontend toolkit.</p>
