--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--3">Top tips for UK student visa applicants</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--21">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/womens-leadership-conference--3">Women’s Leadership Conference</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289218.es-419">Llegará a México la mayor delegación Británica del sector turismo en la historia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/visa-applications--2">Visa applications</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210686.zh-tw">台英組織簽訂合作，開放資料邁向國際</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262681.pt">SP assina acordo com Reino Unido na área de ciência e tecnologia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/188638.ru">Прием в Москве для Большого симфонического окестра</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/korea-celebrates-british-designers-and-artists-at-gwangju-biennale--2">Korea celebrates British designers and artists at Gwangju Biennale</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/aviation-security-update">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-york-celebrates-british-culture-and-creativity-with-sir-ian-mckellen--6">New York celebrates British culture and creativity with Sir Ian McKellen</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/174063.pt">VisitBritain anuncia parceria com Rock in Rio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-chevening-scholarships-in-bolivia-are-open--2">Applications for Chevening Scholarships in Bolivia are open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212013.es-419">Cámara de Comercio Peruano-Británica y la Universidad San Ignacio de Loyola celebran la Semana Mundial del Emprendimiento 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--2">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
