Hourly scheduled redeploy db5dbf1c0ac850628eba68c0f77b9aa9eedc9152

--- a/document-types/notice.html
+++ b/document-types/notice.html
@@ -364,7 +364,7 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/publications/guidance-about-the-events-research-programme-erp-paving-the-way-for-larger-audiences-to-attend-sport-theatre-and-gigs-safely-this-summer">Information about the Events Research Programme (ERP), paving the way for larger audiences to attend sport, theatre and gigs safely this summer</a></li>
-<li><a href="https://www.gov.uk/government/publications/low-carbon-hydrogen-supply-2-competition">Low Carbon Hydrogen Supply 2 Competition</a></li>
+<li><a href="https://www.gov.uk/government/publications/low-carbon-hydrogen-supply-2-competition">Apply for the Low Carbon Hydrogen Supply 2 Competition</a></li>
 <li><a href="https://www.gov.uk/government/publications/notice-143-a-guide-for-international-post-users">Notice 143: a guide for international post users</a></li>
 <li><a href="https://www.gov.uk/government/publications/event-research-programme-ministerial-directions">Events Research Programme - Ministerial Directions</a></li>
 <li><a href="https://www.gov.uk/government/publications/vat-notice-733-flat-rate-scheme-for-small-businesses">VAT Notice 733: Flat Rate Scheme for small businesses</a></li>
