Hourly scheduled redeploy bb88f79b6aad5bff015689eb90aa732fbf0bcfbc

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/286266.es">Día de San David 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/282770.es">Exhibición y cata de cervezas premium británicas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179513.es-419">La Secretaría de Energía, el Gobierno Británico y el Centro Mario Molina desarrollarán para México la Calculadora 2050</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-are-now-open--2">Applications for 2014/15 Chevening Scholarships in Lebanon Open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/214930.pt">UKTI promove competição de Tecnologia e Inovação no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-5th-uk-china-architecture-forum-held-in-guangzhou-on-4-july--2">The 5th UK-China Architecture Forum held in Guangzhou on 4 July</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269252.pt">Britânicos participam da maior feira ferrovária da América Latina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220750.zh-tw">英國氣候變遷特別代表來台訪問</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240210.pt">Mestre cervejeiro britânico apresenta workshop em São Paulo</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--20">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269087.es-419">Servicio del Día del Recuerdo —Remembrance Sunday— de la Embajada Británica en la Ciudad de México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/slovenia-v-england-football-match-travel-advice--2">Slovenia v England football match travel advice</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--3">Top tips for UK student visa applicants</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
