Hourly scheduled redeploy bb88f79b6aad5bff015689eb90aa732fbf0bcfbc

--- a/document-types/utaac_decision.html
+++ b/document-types/utaac_decision.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: utaac_decision</h1>
 
-  <p>There are <strong>1127</strong> pages with document type
+  <p>There are <strong>1126</strong> pages with document type
 &lsquo;utaac_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/sm-v-secretary-of-state-for-work-and-pensions-dla-2021-ukut-119-aac">SM v Secretary of State for Work and Pensions (DLA):  [2021] UKUT 119 (AAC)</a></li>
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/am-v-disclosure-and-barring-service-the-royal-college-of-nursing-and-the-national-education-union-2021-ukut-136-aac">AM v Disclosure and Barring Service, the Royal College of Nursing and the National Education Union: [2021] UKUT 136 (AAC)</a></li>
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/kt-and-sh-v-secretary-of-state-for-work-and-pensions-pip-2020-ukut-252-aac">KT and SH v Secretary of State for Work and Pensions (PIP): [2020] UKUT 252 (AAC)</a></li>
-<li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/s-m-v-secretary-of-state-for-work-and-pensions-dla-2021-ukut-119-aac">S M v Secretary of State for Work and Pensions (DLA): [2021] UKUT 119 (AAC)</a></li>
+<li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/2018-ukut-269-aac-c-c-v-the-governing-body-of-a-school-the-secretary-of-state-for-education-first-interested-party-and-the-national-autistic-society-second-interested-party-sen">C &amp; C v The Governing Body of a School, The Secretary of State for Education (First Interested Party) and The National Autistic Society (Second Interested Party) (SEN): [2018] UKUT 269 (AAC) ; [2019] AACR 10</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=utaac_decision&amp;count=10">Source query from Search API</a></p>
 
