--- a/apps/info-frontend.html
+++ b/apps/info-frontend.html
@@ -446,11 +446,26 @@
 </div>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
-<p>This application exposes the user needs and metrics about content on GOV.UK.</p>
+<p>This application exposes the user needs and metrics about content on GOV.UK. It does this by fetching content details from <a href="https://github.com/alphagov/content-store">Content Store</a>.</p>
 
-<p>It fetches content details (including user needs) from the <a href="https://github.com/alphagov/content-store"><code>content-store</code></a>.</p>
+<p>Information pages have a prefix of <code>/info</code>, for example: <a href="https://www.gov.uk/info/benefits-calculators">https://www.gov.uk/info/benefits-calculators</a> and <a href="https://www.gov.uk/info/employers-sick-pay">https://www.gov.uk/info/employers-sick-pay</a></p>
 
-<p>It renders URL paths prefixed with <code>info/</code>, for example: <a href="https://www.gov.uk/info/benefits-calculators">https://www.gov.uk/info/benefits-calculators</a> and <a href="https://www.gov.uk/info/employers-sick-pay">https://www.gov.uk/info/employers-sick-pay</a></p>
+<h2 id="technical-documentation">Technical documentation</h2>
+
+<p>This is a Ruby on Rails app, and should follow <a href="https://docs.publishing.service.gov.uk/manual/conventions-for-rails-applications.html">our Rails app conventions</a>.</p>
+
+<p>You can use the <a href="https://github.com/alphagov/govuk-docker">GOV.UK Docker environment</a> or the local <code>startup.sh</code> script to run the app. Read the <a href="https://docs.publishing.service.gov.uk/manual/local-frontend-development.html">guidance on local frontend development</a> to find out more about each approach, before you get started.</p>
+
+<p>If you are using GOV.UK Docker, remember to combine it with the commands that follow. See the <a href="https://github.com/alphagov/govuk-docker#usage">GOV.UK Docker usage instructions</a> for examples.</p>
+
+<h3 id="running-the-test-suite">Running the test suite</h3>
+
+<pre><code>bundle exec rake
+</code></pre>
+
+<h2 id="license">License</h2>
+
+<p><a href="https://github.com/alphagov/info-frontend/blob/main/LICENCE">MIT License</a></p>
 <p></div></p>
 
 
