--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/active10">Active 10</a></li>
 <li><a href="https://www.gov.ukhttp//www.banbridge.com/">Banbridge District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.tewkesburybc.gov.uk">Tewkesbury Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/active10">Active 10</a></li>
 <li><a href="https://www.gov.ukhttp//www.pembrokeshire.gov.uk">Pembrokeshire County Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
-<li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.reigate-banstead.gov.uk/">Reigate and Banstead Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxford.gov.uk">Oxford City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
+<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
+<li><a href="https://www.gov.ukhttp//www.cyberaware.gov.uk">Cyber Aware</a></li>
+<li><a href="https://www.gov.ukhttp//www.beanenergyshopper.com/">Power to Switch</a></li>
+<li><a href="https://www.gov.ukhttp//www.medway.gov.uk">Medway Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.canterbury.gov.uk">Canterbury City Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
