--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/210510.zh-tw">英國慶祝世界人權日 讚許台灣人權發展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--7">Advice for British nationals in Mumbai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262717.uk">Посольство Великої Британії в Україні проведе освітню виставку в Києві та розіграє навчальний курс у Лондоні</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/188638.ru">Прием в Москве для Большого симфонического окестра</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/237972.es">José Ignacio Sánchez Galán, Presidente de Iberdrola,  miembro de la Orden del Imperio Británico</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/job-vacancy-deputy-consul-generaldeputy-director-for-ukti-milan--2">Job vacancy: Deputy Consul General/Deputy Director for UKTI Milan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/ukuzbekistan-bilateral-relations--2">UK/Uzbekistan Bilateral Relations</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-30th-session-statement-by-the-united-kingdom-of-great-britain-and-northern-ireland--3">Human Rights Council, 30th Session: Statement by the United Kingdom of Great Britain and Northern Ireland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269087.es-419">Servicio del Día del Recuerdo —Remembrance Sunday— de la Embajada Británica en la Ciudad de México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220750.zh-tw">英國氣候變遷特別代表來台訪問</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/international-human-rights-day--3">International Human Rights Day</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--3">Top tips for UK student visa applicants</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262681.pt">SP assina acordo com Reino Unido na área de ciência e tecnologia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/high-commissioners-blog">High Commissioner’s Blog</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257368.es-419">Una Semana Británica en Antioquia, Colombia</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
