--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//covid19.nhs.uk/">Get the NHS COVID-19 app</a></li>
-<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.police.uk/">Crime in your area - Police UK</a></li>
-<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.wyrebc.gov.uk/">Wyre Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.swindon.gov.uk">Swindon Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hertsmere.gov.uk/">Hertsmere Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.pembrokeshire.gov.uk">Pembrokeshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
+<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ards-council.gov.uk/">Ards Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nidirect.gov.uk/campaigns/coronavirus-covid-19">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
+<li><a href="https://www.gov.ukhttp//www.brent.gov.uk">London Borough of Brent Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.centralbedfordshire.gov.uk/">Central Bedfordshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.gov.uk/alerts/when-you-get-an-alert">When you get an emergency alert</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
