--- a/apps/account-api/api.html
+++ b/apps/account-api/api.html
@@ -365,7 +365,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/account-api/commit/f08e6a173742ccbc1f268bb254c4f26d9752d5bc">11 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/account-api/commit/81708df20d4bf58a16c71afd54a8d38f518c392c">29 Jun 2021</a>
 </div>
 
   <h1 class="page-title">account-api: API documentation</h1>
@@ -611,6 +611,12 @@ end
 </ul>
 <h4 id="json-response-fields">JSON response fields</h4>
 <ul>
+<li>
+<code>id</code>
+<ul>
+<li>the user identifier</li>
+</ul>
+</li>
 <li>
 <code>level_of_authentication</code>
 <ul>
