--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
-      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
-      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
-      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
-      <li><a href="http://www.oxford.gov.uk" class="govuk-link">Oxford City Council</a></li>
-      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
-      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
-      <li><a href="https://www.nidirect.gov.uk/campaigns/coronavirus-covid-19" class="govuk-link">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
-      <li><a href="http://www.portsmouth.gov.uk" class="govuk-link">Portsmouth City Council</a></li>
+      <li><a href="http://www.reigate-banstead.gov.uk/" class="govuk-link">Reigate and Banstead Borough Council</a></li>
+      <li><a href="http://www.north-herts.gov.uk" class="govuk-link">North Hertfordshire District Council</a></li>
+      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
+      <li><a href="http://www.liverpool.gov.uk" class="govuk-link">Liverpool City Council</a></li>
+      <li><a href="http://www.cookstown.gov.uk/" class="govuk-link">Cookstown District Council</a></li>
+      <li><a href="http://www.chiltern.gov.uk" class="govuk-link">Chiltern District Council</a></li>
+      <li><a href="https://gov.wales/covid-19-alert-levels" class="govuk-link">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+      <li><a href="http://www.tewkesburybc.gov.uk" class="govuk-link">Tewkesbury Borough Council</a></li>
+      <li><a href="http://www.eastcambs.gov.uk" class="govuk-link">East Cambridgeshire District Council</a></li>
+      <li><a href="http://www.thanet.gov.uk" class="govuk-link">Thanet District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
