--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.derby.gov.uk">Derby City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.west-dunbarton.gov.uk/">West Dunbartonshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.suffolkcc.gov.uk">Suffolk County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.merton.gov.uk/">London Borough of Merton Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cravendc.gov.uk">Craven District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
-<li><a href="https://www.gov.ukhttp//publicappointments.cabinetoffice.gov.uk/">Public Appointments - Cabinet Office</a></li>
+<li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.monmouthshire.gov.uk">Monmouthshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.kingston.gov.uk/">Royal Borough of Kingston upon Thames Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.sheffield.gov.uk">Sheffield City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.pembrokeshire.gov.uk">Pembrokeshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/active10">Active 10</a></li>
+<li><a href="https://www.gov.ukhttp//www.uttlesford.gov.uk">Uttlesford District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
